k8s/payment-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-db
  template:
    metadata:
      labels:
        app: payment-db
    spec:
      containers:
      - name: payment-db
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: payment-db-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: payment-db-storage
        persistentVolumeClaim:
          claimName: payment-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: payment-db-svc
spec:
  selector:
    app: payment-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
